tests/baselines/reference/conflictMarkerTrivia3.errors.txt
tests/cases/compiler/conflictMarkerTrivia3.tsx(1,11): error TS17004: Cannot use JSX unless the '--jsx' flag is provided.
tests/cases/compiler/conflictMarkerTrivia3.tsx(1,16): error TS1005: '</' expected.
tests/cases/compiler/conflictMarkerTrivia3.tsx(2,1): error TS1185: Merge conflict marker encountered.


==== tests/cases/compiler/conflictMarkerTrivia3.tsx (3 errors) ====
    const x = <div>
              ~~~~~
!!! error TS17004: Cannot use JSX unless the '--jsx' flag is provided.
                   
    <<<<<<< HEAD
    ~~~~~~~~~~~~
!!! error TS1005: '</' expected.
    ~~~~~~~
!!! error TS1185: Merge conflict marker encountered.